possible fix to the safari browser not showing images. everything else looking good so far.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -149,6 +149,7 @@ textarea,
 }
 
 .photos img {
+    display: relative;
     padding:10px;
     width: 50%;
     border-radius: 25px;
